アイテム周りの修正 プレイヤー周りの修正 ブロック周りの修正

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -89,6 +89,9 @@
     <Filter Include="ソース ファイル\Game\UI\PlayerUI">
       <UniqueIdentifier>{7162809b-e06e-4d22-91bf-02cf1bc08ac2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\UI\Stage">
+      <UniqueIdentifier>{65edd1ba-a62e-4bc5-b2bb-c2778c75654e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
