ベースプロジェクト更新 アイテム周りの修正 コードを整理

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="src\BaseSystem\CShader.cpp" />
     <ClCompile Include="src\BaseSystem\CSignboardPause.cpp" />
     <ClCompile Include="src\BaseSystem\CSound.cpp" />
+    <ClCompile Include="src\BaseSystem\CSoundManager.cpp" />
     <ClCompile Include="src\BaseSystem\CTask.cpp" />
     <ClCompile Include="src\BaseSystem\CTaskManager.cpp" />
     <ClCompile Include="src\BaseSystem\CText.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="src\BaseSystem\CShader.h" />
     <ClInclude Include="src\BaseSystem\CSignboardPause.h" />
     <ClInclude Include="src\BaseSystem\CSound.h" />
+    <ClInclude Include="src\BaseSystem\CSoundManager.h" />
     <ClInclude Include="src\BaseSystem\CTask.h" />
     <ClInclude Include="src\BaseSystem\CTaskManager.h" />
     <ClInclude Include="src\BaseSystem\CText.h" />
