--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -92,6 +92,9 @@
     <Filter Include="ソース ファイル\Game\UI\Stage">
       <UniqueIdentifier>{65edd1ba-a62e-4bc5-b2bb-c2778c75654e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\BaseSystem\Sound">
+      <UniqueIdentifier>{99ead9f6-35af-4e55-a66f-ec4ac8d90924}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -140,9 +143,6 @@
       <Filter>ソース ファイル\BaseSystem\System</Filter>
     </ClCompile>
     <ClCompile Include="src\BaseSystem\CInput.cpp">
-      <Filter>ソース ファイル\BaseSystem\System</Filter>
-    </ClCompile>
-    <ClCompile Include="src\BaseSystem\CSound.cpp">
       <Filter>ソース ファイル\BaseSystem\System</Filter>
     </ClCompile>
     <ClCompile Include="src\BaseSystem\CTexture.cpp">
@@ -427,6 +427,12 @@
     <ClCompile Include="src\Game\CInvincible.cpp">
       <Filter>ソース ファイル\Game\Field\Object</Filter>
     </ClCompile>
+    <ClCompile Include="src\BaseSystem\CSoundManager.cpp">
+      <Filter>ソース ファイル\BaseSystem\Sound</Filter>
+    </ClCompile>
+    <ClCompile Include="src\BaseSystem\CSound.cpp">
+      <Filter>ソース ファイル\BaseSystem\Sound</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -475,9 +481,6 @@
       <Filter>ソース ファイル\BaseSystem\System</Filter>
     </ClInclude>
     <ClInclude Include="src\BaseSystem\CInput.h">
-      <Filter>ソース ファイル\BaseSystem\System</Filter>
-    </ClInclude>
-    <ClInclude Include="src\BaseSystem\CSound.h">
       <Filter>ソース ファイル\BaseSystem\System</Filter>
     </ClInclude>
     <ClInclude Include="src\BaseSystem\CTexture.h">
@@ -785,6 +788,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CInvincible.h">
       <Filter>ソース ファイル\Game\Field\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BaseSystem\CSoundManager.h">
+      <Filter>ソース ファイル\BaseSystem\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BaseSystem\CSound.h">
+      <Filter>ソース ファイル\BaseSystem\Sound</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
