無敵アイテムに不具合があったので修正 BGMとSEを一部追加

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -424,14 +424,17 @@
     <ClCompile Include="src\Game\CRecoveryObject.cpp">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CInvincible.cpp">
-      <Filter>ソース ファイル\Game\Field\Object</Filter>
-    </ClCompile>
     <ClCompile Include="src\BaseSystem\CSoundManager.cpp">
       <Filter>ソース ファイル\BaseSystem\Sound</Filter>
     </ClCompile>
     <ClCompile Include="src\BaseSystem\CSound.cpp">
       <Filter>ソース ファイル\BaseSystem\Sound</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CInvincible.cpp">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CInvincibleObjectBase.cpp">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -786,14 +789,17 @@
     <ClInclude Include="src\Game\CRecoveryObject.h">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CInvincible.h">
-      <Filter>ソース ファイル\Game\Field\Object</Filter>
-    </ClInclude>
     <ClInclude Include="src\BaseSystem\CSoundManager.h">
       <Filter>ソース ファイル\BaseSystem\Sound</Filter>
     </ClInclude>
     <ClInclude Include="src\BaseSystem\CSound.h">
       <Filter>ソース ファイル\BaseSystem\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CInvincible.h">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CInvincibleObjectBase.h">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
