ベースプロジェクト更新

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\BaseSystem\CBGMData.cpp" />
+    <ClCompile Include="src\BaseSystem\CBGMManager.cpp" />
     <ClCompile Include="src\BaseSystem\CBillBoard.cpp" />
     <ClCompile Include="src\BaseSystem\CBillBoardImage.cpp" />
     <ClCompile Include="src\BaseSystem\CBulletEffect.cpp" />
@@ -28,6 +30,7 @@
     <ClCompile Include="src\BaseSystem\CDebugProfiler.cpp" />
     <ClCompile Include="src\BaseSystem\CDebugTimer.cpp" />
     <ClCompile Include="src\BaseSystem\CEffect.cpp" />
+    <ClCompile Include="src\BaseSystem\CFade.cpp" />
     <ClCompile Include="src\BaseSystem\CFont.cpp" />
     <ClCompile Include="src\BaseSystem\CCharaBase.cpp" />
     <ClCompile Include="src\BaseSystem\CGamePause.cpp" />
@@ -126,6 +129,8 @@
     <ClCompile Include="src\Test\System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\BaseSystem\CBGMData.h" />
+    <ClInclude Include="src\BaseSystem\CBGMManager.h" />
     <ClInclude Include="src\BaseSystem\CBillBoard.h" />
     <ClInclude Include="src\BaseSystem\CBillBoardImage.h" />
     <ClInclude Include="src\BaseSystem\CBulletEffect.h" />
@@ -143,6 +148,7 @@
     <ClInclude Include="src\BaseSystem\CDebugProfiler.h" />
     <ClInclude Include="src\BaseSystem\CDebugTimer.h" />
     <ClInclude Include="src\BaseSystem\CEffect.h" />
+    <ClInclude Include="src\BaseSystem\CFade.h" />
     <ClInclude Include="src\BaseSystem\CFont.h" />
     <ClInclude Include="src\BaseSystem\CCharaBase.h" />
     <ClInclude Include="src\BaseSystem\CGamePause.h" />
