--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -90,6 +90,8 @@
     <ClCompile Include="src\Game\CStage2.cpp" />
     <ClCompile Include="src\Game\CStageBase.cpp" />
     <ClCompile Include="src\Game\CStageManager.cpp" />
+    <ClCompile Include="src\Game\CStageSelection.cpp" />
+    <ClCompile Include="src\Game\CStageSelectionStage.cpp" />
     <ClCompile Include="src\Game\CVanguard.cpp" />
     <ClCompile Include="src\Game\CVanguardGauge.cpp" />
     <ClCompile Include="src\Game\CWeaponEnemy.cpp" />
@@ -221,6 +223,8 @@
     <ClInclude Include="src\Game\CStage2.h" />
     <ClInclude Include="src\Game\CStageBase.h" />
     <ClInclude Include="src\Game\CStageManager.h" />
+    <ClInclude Include="src\Game\CStageSelection.h" />
+    <ClInclude Include="src\Game\CStageSelectionStage.h" />
     <ClInclude Include="src\Game\CVanguard.h" />
     <ClInclude Include="src\Game\CVanguardGauge.h" />
     <ClInclude Include="src\Game\CWeaponEnemy.h" />
