ステージ及びプレイヤーの処理を変更

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 
 /3DLv3_2023_vs2019/Project/BaseProject/BaseProject/Release
 /3DLv3_2023_vs2019/Project/BaseProject/Release
+/3DLv3_2023_vs2019/Project/BaseProject/Debug
