--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="src\Game\CStageManager.cpp" />
     <ClCompile Include="src\Game\CStageSelection.cpp" />
     <ClCompile Include="src\Game\CStageSelectionStage.cpp" />
+    <ClCompile Include="src\Game\CTree1.cpp" />
     <ClCompile Include="src\Game\CVanguard.cpp" />
     <ClCompile Include="src\Game\CVanguardGauge.cpp" />
     <ClCompile Include="src\Game\CWeaponEnemy.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="src\Game\CStageManager.h" />
     <ClInclude Include="src\Game\CStageSelection.h" />
     <ClInclude Include="src\Game\CStageSelectionStage.h" />
+    <ClInclude Include="src\Game\CTree1.h" />
     <ClInclude Include="src\Game\CVanguard.h" />
     <ClInclude Include="src\Game\CVanguardGauge.h" />
     <ClInclude Include="src\Game\CWeaponEnemy.h" />
